<resources>
    <string name="app_name">Baumanière</string>
    <string name="welcome_text">Bienvenue chez</string>
    <string name="imageBaumaniere_desc">Image Baumanière</string>
    <string name="button_text_starter">Starter</string>
    <string name="button_text_main">Main</string>
    <string name="button_text_dessert">Dessert</string>
    <string name="button_text_hotel">Hotel</string>
    <string name="image_dish">photo of dish</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="text_quantity">Quantity</string>
    <string name="text_desc_plus">plus</string>
    <string name="text_desc_minus">minus</string>
    <string name="default_quantity">1</string>
    <string name="button_pay">continue and pay</string>
    <string name="cart_button">cart</string>
    <string name="quantity_default">0</string>
    <string name="desc_img_cart">cart picture button</string>
    <string name="input_last_name">lastname</string>
    <string name="input_first_name">firstname</string>
    <string name="input_email">email@example.com</string>
    <string name="input_address">0</string>
    <string name="input_password">*****</string>
    <string name="label_last_name">Last name</string>
    <string name="label_first_name">First name</string>
    <string name="label_email">Email</string>
    <string name="label_address">Address</string>
    <string name="label_password">Password</string>
    <string name="button_sign_up">Sign Up</string>

    <!-- MainActivity -->
    <string name="reset">Reset</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="nonce">Nonce</string>
    <string name="add_payment_method">Add Payment Method</string>
    <string name="purchase">Purchase</string>
    <string name="loading">Loading…</string>

    <!-- CreateTransactionActivity -->
    <string name="processing_transaction">Processing Transaction</string>
    <string name="transaction_failed">Transaction Failed</string>
    <string name="transaction_complete">Transaction Complete</string>

    <!-- Settings -->
    <string name="options">Options</string>
    <string name="sandbox">Sandbox</string>
    <string name="production">Production</string>
    <string name="authorization">Authorization</string>
    <string name="tokenization_key">Use Tokenization Key</string>
    <string name="tokenization_key_summary">Use tokenization key for authorizing requests</string>
    <string name="customer">Customer</string>
    <string name="customer_summary">The customer id to use</string>
    <string name="merchant_account">Merchant Account</string>
    <string name="empty_merchant_account">Not specifying a merchant account will use the default merchant account. \n\nMerchant Account: %s</string>
    <string name="collect_device_data">Collect Device Data</string>
    <string name="collect_device_data_summary">Collects device data for fraud purposes</string>
    <string name="environment">Environment</string>
    <string name="paypal">PayPal</string>
    <string name="paypal_use_hardcoded_configuration">Use Hardcoded Configuration</string>
    <string name="paypal_use_hardcoded_configuration_summary">Use the configuration included in the PayPal SDK instead of downloading new configuration</string>
    <string name="paypal_request_address_scope">Request Address Scope</string>
    <string name="paypal_request_address_scope_summary">Request address scope from the user</string>
    <string name="three_d_secure">3D Secure</string>
    <string name="enable_three_d_secure">Enable 3D Secure</string>
    <string name="enable_three_d_secure_summary">3D Secure will automatically be run on all Card payment methods</string>
    <string name="require_three_d_secure">Require 3D Secure</string>
    <string name="require_three_d_secure_summary">Requires a successful authentication for 3D Secure transactions</string>
    <string name="paypal_disable_signature_verification">Disable app switch signature verification</string>
    <string name="paypal_disable_signature_verification_summary">Allows app switch with a PayPal Wallet app that is not signed</string>
    <string name="paypal_future_payment">Future Payment</string>
    <string name="paypal_single_payment">Single Payment</string>
    <string name="paypal_billing_agreement">Billing Agreement</string>
    <string name="paypal_payment_type">Payment Type</string>
    <string name="cardholder_name_disabled">Disabled</string>
    <string name="cardholder_name_optional">Optional</string>
    <string name="cardholder_name_required">Required</string>
    <string name="three_d_secure_v1">Version 1</string>
    <string name="three_d_secure_v2">Version 2</string>
    <string name="three_d_secure_v1_value">1</string>
    <string name="three_d_secure_v2_value">2</string>
</resources>